<resources>
    <string name="app_name">Chatter</string>
    <string name="register_button">Register</string>
    <string name="login_button">Login</string>
    <string name="send_hint">Type a message</string>
    <string name="login_welcome">Welcome to Chatter</string>
    <string name="login_message">Please, login to access</string>
    <string name="register_suggestion">No account? Sign up!</string>
    <string name="email_hint">E-Mail</string>
    <string name="pass_hint">Password</string>
    <string name="username_hint">NickName</string>
    <string name="pass_verify_hint">Confirm Password</string>
    <string name="field_not_filled">Please fill all login entries</string>
    <string name="signout_menu_item">Sign Out</string>
    <string name="settings_menu_item">Settings</string>
    <string name="send_box_hint">Type a message</string>
    <string-array name="selectable_items">
        <item>Red</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Yellow</item>
    </string-array>
    <string-array name="selectable_colors">
        <item>red</item>
        <item>blue</item>
        <item>green</item>
        <item>yellow</item>
    </string-array>
</resources>